<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="barrios.abrahan.morehealthy2.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_entrenamiento"
        android:name="barrios.abrahan.morehealthy.ui.entrenamiento.EntrenamientoFragment"
        android:label="@string/entrenamiento"
        tools:layout="@layout/entrenamiento_fragment"/>

    <fragment
        android:id="@+id/navigation_alimentos"
        android:name="barrios.abrahan.morehealthy2.ui.dashboard.AlimentosFragment"
        android:label="@string/alimentos"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_progreso"
        android:name="barrios.abrahan.morehealthy2.ui.notifications.ProgresoFragment"
        android:label="@string/progreso"
        tools:layout="@layout/fragment_notifications" />



</navigation>