<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azulverde1"
    tools:context=".WelcomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/completar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="190dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/hello"
            android:textSize="20sp"
            android:textColor="@color/azuloscuro2"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingEnd="1dp"
            android:paddingStart="140dp"
            />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="Usuario"
            android:textSize="20sp"
            android:textColor="@color/azuloscuro2"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingEnd="90dp"
            android:paddingStart="1dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textSize="16sp"
        android:textColor="@color/azuloscuro2"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ourWishes"
        android:textSize="16sp"
        android:textColor="@color/azuloscuro2"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/youCanLogin"
        android:textSize="20sp"
        android:textColor="@color/azuloscuro2"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>


    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/youCanContinue"
        android:background="@color/azuloscuro2"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        />
</LinearLayout>