<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Hola Daniel!"
            android:textColor="@color/azuloscuro2" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advice"

        android:layout_marginLeft="25dp"
        android:textColor="@color/gris"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@color/azul2"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/azuloscuro2"
            android:textStyle="bold"
            android:text="@string/recommendations"
            android:textSize="17sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris"
            android:textStyle="bold"
            android:text="@string/recommendationsToLooseWeight"
            android:textSize="14sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            />

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/entrenamiento_inicial"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris"
            android:textStyle="bold"
            android:text="@string/hook"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Continuar leyendo"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:background="@color/azuloscuro2"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>
</LinearLayout>